<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#252525"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/login_box"
        android:layout_width="385dp"
        android:layout_height="280dp"
        android:background="@drawable/login_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.567" />

    <EditText
        android:id="@+id/l_username"
        android:layout_width="306dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/input_box"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:textColor="#F6F5F5"
        android:textColorHint="#1AFFFFFF"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/login_box"
        app:layout_constraintTop_toBottomOf="@+id/username_label"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif"
        android:text="@string/username_label"
        android:textColor="#FFFFFF"
        android:textColorLink="#F4EEEE"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/login_box"
        app:layout_constraintTop_toTopOf="@+id/login_box" />

    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="124dp"
        android:fontFamily="sans-serif"
        android:text="@string/password_label"
        android:textColor="#FFFFFF"
        android:textColorLink="#F4EEEE"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/login_box"
        app:layout_constraintTop_toTopOf="@+id/login_box" />

    <EditText
        android:id="@+id/l_username2"
        android:layout_width="306dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/input_box"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:textColor="#F6F5F5"
        android:textColorHint="#1AFFFFFF"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/login_box"
        app:layout_constraintTop_toBottomOf="@+id/password_label"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:background="@drawable/login_btn"
        android:text="@string/login_label"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/login_box"
        app:layout_constraintEnd_toEndOf="@+id/login_box"
        app:layout_constraintStart_toStartOf="@+id/login_box"
        app:layout_constraintTop_toBottomOf="@+id/l_username2" />

    <TextView
        android:id="@+id/copyright_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright_label"
        android:textColor="#80FFFFFF"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_box"
        app:layout_constraintVertical_bias="0.98" />

</androidx.constraintlayout.widget.ConstraintLayout>